--- a/_posts/2022-05-09-VOCUS-你知道日文怎麼形容-年久老舊-的東西嗎.html
+++ b/_posts/2022-05-09-VOCUS-你知道日文怎麼形容-年久老舊-的東西嗎.html
@@ -8,26 +8,20 @@ tags: blog
 author: 你的英日語自學導師　 ོꦿ༄譯꧁難忘꧂
 ---
 
-<div class="draft-block draft--p left"></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:5883px" class="image-block-prerender" data-src="https://images.unsplash.com/photo-1563036469-53ed89b52de5?crop=entropy&cs=srgb&fm=jpg&ixid=MnwyNTY4N3wwfDF8c2VhcmNofDE0fHxvbGQlMjB0aGluZ3N8ZW58MHx8fHwxNjUxODU0OTg1&ixlib=rb-1.2.1&q=85" data-width="5883" data-height="3922" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.unsplash.com/photo-1563036469-53ed89b52de5"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">家家戶戶都有的老舊管線、被收在櫃子裡好幾年的小玩偶、公園裡斑駁掉漆的鞦韆...你房裡隨便一翻都可能找到意外的舊物。如果要跟日本人說你有某件東西用了(或是封印了)很久，看得出有些歲月的斑痕，日文有一句慣用語很好用。</div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
 <h2 class="draft-block draft--h2" name="header-e0jov">年季が入る（ねんき が はいる）</h2>
-<div class="draft-block draft--p left"></div>
 <ul>
   <li class="draft-block draft--li"><span style="font-weight: bold; ">是寫「年季」(ねんき)，不是「年紀」(ねんき)</span></li>
 </ul>
 <div class="draft-block draft--p left">說到年久的舊物，中文腦很自然會聯想到「使用的年數很久、有一把年紀的東西」(但中文的年紀不太用來形容物件)，所以如果你要偷吃步的話，可以<span style="font-weight: bold; ">聯想</span>「年季が入る」的物件是含有(入る)不少年紀所以很老舊的東西。但要記得，人家日本人在這裡可不是用「年紀」這個漢字。</div>
 <div class="draft-block draft--p left">日文的「年紀」(ねんき)可以像中文一樣指年齡，此外還有年數的意思，但它和「年季」(ねんき)意思又不同了。那麼為什麼日文是使用「年季」這個漢字呢？</div>
-<div class="draft-block draft--p left"></div>
 <ul>
   <li class="draft-block draft--li"><span style="font-weight: bold; ">「年季」= 「年季奉公」（ねんきぼうこう）</span></li>
 </ul>
 <div class="draft-block draft--p left">原來那句慣用語是源自在江戸時代稱為「年季奉公」的一套制度。所謂的<span style="font-weight: bold; ">年季</span>，是指<span style="font-weight: bold; ">以1年作為1季</span>來計算，是一種古代計算年資的單位。那時代的人，有些在很小的時候就住在別人家裡工作很長一段時間(也就是所謂的「奉公」)，很像被雇用的童工，若沒發生什麼嚴重的意外，基本上是會每一季都續約，連續僱用好幾季。</div>
 <div class="draft-block draft--p left">通常這些孩子會在十歲開始在別人家工作。一開始的位階是常被使喚來使喚去的打雜學徒(稱為丁稚 ，でっち)。連續工作5年後會升職變成「若衆」 (わかしゅ，意思是未成年的男子、小伙)，開始能領薪水，聽起來蠻可憐的吼。</div>
 <div class="draft-block draft--p left">再累積個5年工作經歷，大概到20歲左右，他們就會升職成伙計(手代 ，てだい)。在這個時間點，他們已經有了十年的工作資歷(十個年季的奉公)。</div>
-<div class="draft-block draft--p left"></div>
 <ul>
   <li class="draft-block draft--li"><span style="font-weight: bold; ">所以「年季が入る」是什麼意思？</span></li>
 </ul>
@@ -37,8 +31,6 @@ author: 你的英日語自學導師　 ོꦿ༄譯꧁難忘꧂
 <div class="draft-block draft--p left">如果是拿來形容物體，例如「年資很久的」(年季が入った)家中管線或公園的鞦韆，就是指這管線或鞦韆已經服務你或其他人好幾年了(為你奉公了很久)，被你用到都老舊了。你只需要把奉公的童工替換成物體，易位思考一下就懂這句慣用語的語感了。</div>
 <div class="draft-block draft--p left">好啦，如果你大腦真的很難像日本腦一樣轉得過來，就試試前面教你的那招大絕，把「年季が入る」的物件聯想成有年紀的老舊東西，總該行了，但記得漢字是要寫「年季」喔。</div>
 <div class="draft-block draft--p left">不過這不一定代表「年季が入る」用來形容人就一定是很老練或用來形容物體就是很老舊，其實有時意思是會互換的，重點是你要看上下文來判斷其義。這一點會在下面的例句中說明。</div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
 <ul>
   <li class="draft-block draft--li"><span style="font-weight: bold; ">「年季が入る」怎麼使用？</span></li>
 </ul>
@@ -47,26 +39,17 @@ author: 你的英日語自學導師　 ོꦿ༄譯꧁難忘꧂
 <blockquote class="draft-block draft--blockquote">店鋪雖然很新，但做拉麵的人卻很有歷練。</blockquote>
 <blockquote class="draft-block draft--blockquote">このバッグは年季が入っていてもう使（つか）えないね。</blockquote>
 <blockquote class="draft-block draft--blockquote">這個包包用久了變得很舊，沒辦法使用了說。</blockquote>
-<div class="draft-block draft--p left"></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1920px" class="image-block-prerender" data-src="https://images.vocus.cc/608f05f1-57f3-4822-8912-47283f919883.png" data-width="1920" data-height="1080" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖取自《尼爾：人工生命》</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/608f05f1-57f3-4822-8912-47283f919883.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖取自《尼爾：人工生命》</figcaption></div>
 <blockquote class="draft-block draft--blockquote">大分（だいぶ）年季が入っているようだな。今（いま）すぐではないだろうが近（ちか）いうちに壊（こわ）れる可能性（かのうせい）があるだろう。</blockquote>
 <blockquote class="draft-block draft--blockquote">這好像蠻年久老舊的。雖然應該不會馬上壞掉，但可能也快了吧。</blockquote>
-<div class="draft-block draft--p left"></div>
 <blockquote class="draft-block draft--blockquote">ママの漬（つ）け物（もの）は年季が入っていてめっちゃ美味（おいし）いよ。</blockquote>
 <blockquote class="draft-block draft--blockquote">媽媽的醃菜做得很有功夫，超好吃的喲。</blockquote>
 <div class="draft-block draft--p left">(* 注意這句的「年季が入る」雖然是形容事物，但不一定都指很老舊，也可能指很老練，你要看上下文判斷。)</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left"><br><span style="font-weight: bold; ">(2) 當作修飾語(形容詞)來用</span></div>
 <blockquote class="draft-block draft--blockquote">年季が入った技（わざ）を見（み）せてやろう。</blockquote>
 <blockquote class="draft-block draft--blockquote">給你看看什麼叫做老練的技術。</blockquote>
 <div class="draft-block draft--p left">(* 注意這句的「年季が入る」形容事物，看上下文可判斷出意思是指很老練。)<br><br><br></div>
 <blockquote class="draft-block draft--blockquote">うちのスタッフは年季が入ったおばちゃま連中（れんちゅう）です。</blockquote>
 <blockquote class="draft-block draft--blockquote">我們這裡的工作人員都是一群很老練的歐巴桑。</blockquote>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">以後你要跟日本朋友介紹台灣的古蹟很有年份，或是要告訴他們你有個功夫很深厚的台灣小吃是必吃時，你就知道該怎麼表達了！</div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">編寫外語教學文章耗時費力，如果有幫助你拓展外文視野，如果你喜歡我作品，懇請訂閱並追蹤我的「擊破你的怪怪英日文」專題！所有生活好用的英日文都完整收錄在此專題中喔！ 🙏🙏🙏</div>
