--- a/_posts/2022-05-09-VOCUS-政治-代價.html
+++ b/_posts/2022-05-09-VOCUS-政治-代價.html
@@ -8,25 +8,18 @@ tags: blog
 author: 蘇 遇
 ---
 
-<div class="draft-block draft--p left"></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1280px" class="image-block-prerender" data-src="https://images.vocus.cc/b3a47477-2e5c-4425-a957-2dc5d50cd6e3.jpg" data-width="1280" data-height="863" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖 / pixabay</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/b3a47477-2e5c-4425-a957-2dc5d50cd6e3.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖 / pixabay</figcaption></div>
 <h3 class="draft-block draft--h3" name="header-4lqrg">共存是好事，但終究要犧牲掉一部份人的生命還有利益損失。</h3>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left"><span style="text-decoration: underline; ">面對疾病，最好的方法是撲滅，次要的方法是共存，既然無法打敗對方那就加入對方的概念，但卻不是所有人都有資格加入對方陣營一起生存在這個世界，或許你們水火不容或是你比他弱，被侵蝕或者吞噬都是有可能出現的結果，然而對於現在我們台灣現在的狀況確實就是這樣子的狀況，當大家在批評對錯時，是否有思考過這種事情本身就是沒有對與錯，任何決定只是在考量怎樣的犧牲才是最低的結果。</span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
 <blockquote class="draft-block draft--blockquote"><span style="font-weight: bold; ">保險</span></blockquote>
 <div class="draft-block draft--p left">首當其衝就是保險業，防疫險在清零時是讓民眾買個安心他們賺錢，當政府宣布共存時，面對的就是龐大的賠償金跟公司的安危，再者更是政府為了防止醫院分出多餘心力來開立診斷證明的簡化履約流程，對於保險業者現在每日四萬例的狀況，更加難以承受負擔的金額，指揮官陳時中說道 : 「防疫保單基本上是一個保險合約，保險合約是經過金管會所核准，都有照合約履行的義務，這是第一個；對指揮中心而言，保險合約也不是我們能夠管的，我們只是要提醒 業者必須有履行的義務，不管數額大小，也不要造成民眾的恐慌。」被犧牲的最大宗就屬保險業者，以下是指揮官所說的話。</div>
 <div class="draft-block draft--quotesSpecial center"><div class="content"><span style="font-weight: bold; ">業者一下要這樣的證明，一下要那樣的證明，事實上，合法的證明都可以來使用，太強調這點，已引發恐慌，有一點在擠兌，民眾急著要趕快拿居隔證明，業者一下又說這證明不行、那證明不行，大家都擠到醫院去，對醫院來講壓力都很大，現正在忙的時候。</span></div></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
 <blockquote class="draft-block draft--blockquote"><span style="font-weight: bold; ">老人與小孩還有慢性病患者</span></blockquote>
 <div class="draft-block draft--p left"><span style="text-decoration: underline; ">指揮中心在說死亡案例時通常都會加上年齡與它自身之疾病，也確實這些本就屬於高風險族群，對於政府的共存他們是否承擔得起尚不可知，但能確定的是門一打開就回不去，說著輕症是大部分人，那少部分人註定就是要被犧牲，物競天擇這是無可厚非的結果，要共存就得有少部分人會面臨死亡，你說有藥物嗎 ? </span></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">藥物的使用有很多限制，小孩、老人與慢性病患者不一定能夠使用，唯一能做的可能就是支持性治療，然後祈禱結果會變好，畢竟每個人的狀況都不同，併發的症狀也都沒有一定標準，就只能希望能夠情狀好轉的禱告。</span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">必要的犧牲終究會贏來勝利的結果，部長也說預計七月會開放邊境也會開放旅遊，據說有很多外國人很希望能夠來台灣遊玩與品嘗美食，新聞都這樣寫我想也不會是亂說，畢竟台灣需要跟國際接軌，必須要快點跟上大家的腳步才不會落後，犧牲是對國家最好的尊重，魚與熊掌本就不可兼得，要顧及所有人更是不可能會發生，自己的事情就自己做好，防護措施或是藥，政府看的是大方向，人生是自己的要對自己負責才好，所有的勝利背後都會有所捨棄，就看我們是站在哪一邊而已，是存活還是被捨棄的族群。</span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
