--- a/_posts/2022-05-09-VOCUS-政治-奇怪的事情.html
+++ b/_posts/2022-05-09-VOCUS-政治-奇怪的事情.html
@@ -8,30 +8,21 @@ tags: blog
 author: 蘇 遇
 ---
 
-<div class="draft-block draft--p left"></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1280px" class="image-block-prerender" data-src="https://images.vocus.cc/9f11b150-97a0-4c2e-a356-1328fe5c267e.jpg" data-width="1280" data-height="853" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖 / pixabay</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/9f11b150-97a0-4c2e-a356-1328fe5c267e.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖 / pixabay</figcaption></div>
 <h2 class="draft-block draft--h2" name="header-8efsu">用納稅錢買防疫物資賣給人民。</h2>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
 <blockquote class="draft-block draft--blockquote"><span style="font-weight: bold; ">納稅</span></blockquote>
 <div class="draft-block draft--p left"><span style="text-decoration: underline; ">繳納稅金是人民的基本義務也是國家運轉的重要齒輪，且台灣的稅金五花八門，奢侈的、地價的、燃料的通通都有，甚至連贈與都必須一部分納入國家所有，但在危急關頭往往政府都會伸出援手讓人民可以更安心的生活，例如口罩危機大家搶破頭，成立國家口罩隊讓人民有口罩可以使用等等，就像現在的快篩試劑一樣，政府的努力人民要有感其實才有實際效用，如果沒有且要自己掏錢還要大排長龍流汗許多，我想或許還不是很周全的結果。</span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
 <blockquote class="draft-block draft--blockquote"><span style="font-weight: bold; ">物資</span></blockquote>
 <div class="draft-block draft--p left"><span style="text-decoration: underline; ">如果國家資金充裕，理應要做防疫物資的配給，何謂配給，就是國家徵用需要的東西並進行分配與處理甚至配送，在共存的情況下或許排隊這件事情好像還好，但當初口罩也是造成大家排隊購買且當時還是疫情最緊繃的時刻，撇開這些不提，國家是否對政客來說是營利單位，還是人民的互助統合單位，如果是後者，那為甚麼用納稅人的錢購買的防疫物資還需要跟人民收費，一隻豬剖了兩層皮是否會比較香甜美味。</span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
 <blockquote class="draft-block draft--blockquote"><span style="font-weight: bold; ">辣個男人</span></blockquote>
 <div class="draft-block draft--p left"><span style="text-decoration: underline; ">郭台銘在去年霸氣用了自己的錢買了BNT疫苗聯合慈濟與台積電的事情還記憶猶新，如果當初民間單位沒有出手是否現在的覆蓋率就沒辦法支稱政府的共存說，疫苗多少錢我不清楚，但我絕對相信政府這麼多年收人民的納稅錢絕對不會比郭台銘與另外兩處還要窮，然而政府卻口罩要錢、消費卷也要人民掏錢、現在快篩也要讓人民排隊搶購還得付錢，但去年買疫苗的三個個人與單位還有公司卻沒有要一分一毛，這到底是甚麼原因呢 ?</span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
 <blockquote class="draft-block draft--blockquote"><span style="font-weight: bold; ">虧損</span></blockquote>
 <div class="draft-block draft--p left"><span style="text-decoration: underline; ">政府前陣子爆出投資失利或是其他可能的原因，但台灣的整體經濟成長的情況是上升的，那也就是說稅收也是上升的，所以最有可能的就是虧損，只是我們不太知道狀況是如何也不敢妄自猜測，或許真的在疫情這段期間花在人民身上很多的金費只是我們不知道而已，是人民無感不知足不知道感恩，還是政府真的太過於默默地照顧我們這我就不得而知了。</span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">政府的付出人民沒有實質的感受到，連發個消費卷都不如鹿茸當初的3600來的爽快直接好，要人們在困苦的時刻掏出一千塊來換消費卷且還發的比鄰國少，口罩人民也要自掏腰包付錢購買然後國家隊政府出錢資助機台，現在的快篩更是不需要跟原廠購買，一堆代理商轉來轉去價格也不知道是否有比原廠便宜，其實想也知道一定不可能比原廠低，那為何這時候就不堅持跟原廠購買有品質保證的快篩產品，這些疑慮我想不會只有我有這些問題，更多的是這些投標廠商的綠色背景猶如草原般亮眼奪目，讓人很難不聯想到後面是否有利益才如此這般不需要原廠的快篩試劑，當然這也是我的猜想沒有任何證據，但投標廠商符合的那些你們都能用網路自行查詢。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">重點在於現在疫情嚴重人民還要掏錢買試劑買血氧機，<br>實在不是那樣的理想與合理，希望政府能多為人民想才能更受愛戴得宜。</span></div>
-<div class="draft-block draft--p left"></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
