--- a/_posts/2022-05-09-VOCUS-親信圍繞麻原與普丁-隔絕一切不利情報導致失控暴走.html
+++ b/_posts/2022-05-09-VOCUS-親信圍繞麻原與普丁-隔絕一切不利情報導致失控暴走.html
@@ -8,4 +8,47 @@ tags: blog
 author: 波波先生
 ---
 
-<p><br></p>
+<h3>兩相對照，顛覆兩人「絕對權力」的一瞬間多麼相似</h3>
+<p>原文發佈日期：2022.3.19
+<br>原文作者：青沼 陽一郎
+<br>授權翻譯：波波先生</p>
+<img src="https://images.unsplash.com/photo-1626830196909-e9c4579f0be4">
+<p>（作家・新聞工作者：青沼 陽一郎）</p>
+<p>原網連結：<a href="https://jbpress.ismedia.jp/articles/-/69544">https://jbpress.ismedia.jp/articles/-/69544</a></p>
+<p>當俄羅斯開始侵略烏克蘭時，某位從來沒有明確解釋過那些過去破壞國際秩序行為背後原因的專家，受到全國放送新聞節目的邀請，表示「普丁的行為情緒化且無法解釋」。而在美國的議會當中，也出現質疑普丁精神狀況的聲音。</p>
+<p>究竟為什麼普丁會變得如此情緒化，而且精神狀態不穩呢？</p>
+<p>無法用自己擁有的常識概念來解決問題，而將原因歸類於情緒化，這實在是缺乏力道的見解，實在不配稱為專家。對於無法產生價值觀共鳴的對象，立即質疑對方精神狀態的作法，太過粗暴甚至具有明顯的排他性。</p>
+<p>俄羅斯侵略烏克蘭的戰爭，已持續3個禮拜；1995年3月20日震撼全球的東京地鐵沙林毒氣事件，已經過27年。在當時，筆者也很難理解事件發生的原因，便在後來透過持續採訪審判的過程去了解事件。回過頭來看，筆者發現沙林毒氣事件的主謀奧姆真理教教主麻原彰晃（本名：松本智津夫）與普丁居然有著許多相似的地方。</p>
+<h3>只有小部分親信的意見能夠入耳</h3>
+<p>雖然我們只能根據媒體有限的報導，來了解普丁與俄羅斯國內的情形。但首先，我們先來確認客觀性的戰況。與原先預想的不同，烏克蘭首都基輔直到現在都還未被攻陷。美國多家媒體於2月上旬時報導，根據美國情報機構的分析，俄羅斯軍隊若大舉進攻烏克蘭，首都基輔將會在2日內被控制。</p>
+<p>但是，烏克蘭軍頑強的抵抗與俄羅斯軍意外薄弱的戰力，導致了目前的戰況。普丁無法隱藏他的焦躁，更有分析指出，其實在開戰前，普丁就受到孤立，組織只接收對自己有利的情報；換句話說，拒絕接觸所有對自己不利的情報。侵略烏克蘭的決定，極有可能是普丁與親信們避開那些反對的政府高官，在密室商量的結果。</p>
+<p>根據時事通信社的報導，美國紐約時報指出，普丁在安全保障問題上頻繁接見的人物為俄羅斯安全委員會書記帕特魯舍夫（Nikolai Patrushev）、俄國對外情報局局長納雷什金（Sergei Naryshkin）、聯邦安全局局長波特尼科夫（Alexander Bortnikov）、國防部長紹伊古（Sergei Shoigu）等人，除了紹伊古部長以外，其他人與普丁都曾在前蘇聯國家安全委員會（KGB）共事過。</p>
+<p>普丁於1975年進入KGB，在聖彼得堡（前列寧格勒）分部的諜報機關工作。當他2000年就任總統時，便集結KGB時代的同事進入自己的政權，形成最大派系的西羅維基（強力派）「聖彼得堡派」。</p>
+<h3>鼓勵「說真話」，但說了反遭斥責</h3>
+<p>俄羅斯內部反政府的媒體派批判，2014年兼併克里米亞的決議，也是前KGB成員們的聖彼得堡派透過密室會議決定的。</p>
+<p>這4人當中，普丁最信任的是帕特魯舍夫書記。他在去年年底，對媒體大放厥詞，指出「烏克蘭領導層是一群跟希特勒一樣邪惡的存在，基輔政權枉稱為人」。決定開戰以及設立戰爭目的為烏克蘭的去軍事化、中立化、去納粹化等，很有可能都是普丁與親信們的「密室裁決」。</p>
+<p>麻原決定執行坂本堤律師滅門與松本沙林毒氣等凶惡行動時，也是與親信們在密室商議的。東京地鐵沙林毒氣事件是在發生前兩日的凌晨時分，麻原在移動中的客運與另外五名幹部商討，決定在地鐵釋放毒氣。幹部當中，最重要的成員是村井秀夫。雖然他在事件發生2日之後，執法單位開始對教團設施進行全面搜索時，被黑道刺殺身亡。但村井秀夫在這些凶惡的犯罪行為當中，確實擔任核心角色，後遭逮捕起訴的主要幹部們，都在法庭上供稱他是麻原最親信的人。</p>
+<p>舉個例子，讓地鐵毒氣事件成功執行的雖然是土谷正實（2018年執行死刑），然而最剛開始向土谷提出這個想法的卻是村井秀夫。當時村井給土谷看了西藏大屠殺的照片，並尋問土谷被血流滿地的殺死跟毒死，哪個比較殘酷？坂本堤律師滅門案時，當初計畫毒殺需使用的注射藥，也是由村井去跟醫生中川智正（同年執行死刑）討要的。執行地鐵沙林毒氣事件的行動成員，也是由村井向麻原推舉。</p>
+<p>另一方面，麻原對不利於自己的情報選擇充耳不聞。根據執行坂本堤律師滅門案的主犯早川紀代秀（同年執行死刑）在法庭上的證言，麻原當時召集幹部，讓他們對教團推動的「救濟計畫」發表「真心話」，尋求幹部們的意見。當時，早川表示目前糧食準備雖然十分充足，但當末日戰爭來臨，現有的發電與能源供應系統將會停止運轉，使教團陷入困境，所以有必要開發獨立的能源系統。聽到此，麻原突然變臉生氣。</p>
+<p>「你在說什麼夢話！」</p>
+<p>明明是遵照上面的命令說出真心話的早川，卻觸了逆鱗。</p>
+<img src="https://images.unsplash.com/photo-1651002520565-b27c9f2b58ab">
+<h3>逐漸以對自己有利的方式解讀現狀</h3>
+<p>無論是教團內部或外部，只要是對自己不利的存在或是敵對人物等，麻原都利用帶有轉生意義的「頗瓦」（藏傳佛教語，英文：Powa）為由殺害他們，清除異己。知道真相的人，還有誰敢違抗他？普丁也曾在2020年8月試圖毒殺反對派領袖阿列克謝．納瓦尼（Alexei Navalny），而遭到歐美各國非難，在此之前也有許多關於普丁暗殺政敵的嫌疑。</p>
+<p>而普丁侵略烏克蘭的目的，據說是為了恢復過去蘇維埃聯邦時期的大國榮光，讓自己能夠以「帝王」姿態君臨俄羅斯。這與麻原透過沙林毒氣事件，預言自己成為「日本之王」有著異曲同工之妙。為此，麻原甚至軍事化教團，企圖顛覆國家。</p>
+<p>1993年8月教團軍事化並成功製造出沙林毒素後，為了生產70噸的大量沙林，麻原指示建立工廠。不只如此，他還派遣教團幹部到解體後陷入混亂的蘇聯，得到前蘇聯軍隊所使用的AK-47自動步槍，將槍枝分解後偷渡回日本。並在教團設施內，秘密開始製造。另外，為了能夠從空中散佈沙林，甚至從俄羅斯購入軍用直升機「Mi-17」。</p>
+<p>但是，根據前述提到的早川在法庭上的證言，他指出購入的直升機根本就破爛不堪無法飛行。即便如此，麻原與村井卻在某一天一起坐在直升機的駕駛座上，指示教團要生產出一樣機型的直升機，這讓早川驚訝不已。然而，這不過是另一個麻原教主對村井的提議，表現出拒絕面對現實的小故事。</p>
+<p>在執行征服日本計畫前，麻原收到了警察組織計畫對教團設施進行全面搜索的情報。如此一來，教團軍事化的事實將會曝光，麻原成為日本之王的野心也將泡湯。要怎麼做才能阻止這一切發生呢？為了誘導警方的搜查方向，教團在事件發生前兩天於巴士上決議，在東京地鐵散佈沙林毒氣。換句話說，他們試圖透過沙林毒氣事件，來避免受到警方強制搜查。</p>
+<p>從旁觀者的立場上來看，這非常令人費解。但是當他們在封閉的空間中，不斷進行對自己有利的發言，這會造成迴聲室效應（又稱：同溫層效應），容易將集團往極端方向引導。與網路上的誹謗中傷會不斷尖銳化的現象相同。</p>
+<p>加上麻原曾經嚐到成功的滋味。坂本堤律師滅門案當中，雖然教團也曾經遭到懷疑但卻全身而退；松本沙林案更是完全不相干的人被列為犯人。這兩個案件也許給了麻原錯覺，讓他認為下一個行動也會順利進行，更加堅信自己的命運，認為自己才是神。</p>
+<h3>現實無法盡如己意時便大發雷霆</h3>
+<p>對普丁來說，2014年的克里米亞兼併，無疑是一次成功的體驗。西方各國雖然不斷批判，但卻沒有積極的祭出對抗措施。若是因為日本警察沒有發揮應有的功能，而助長奧姆真理教的滋長；那麼歐巴馬政權之後的美國，就是因為卸下世界警察的角色，從而導致俄羅斯的暴走。</p>
+<p>麻原早在事件發生之前，就不斷告訴信徒們教團被國家權力用毒氣瓦斯攻擊並彈壓。利用這個說法，正當化沙林的祕密製造，並切斷外界情報讓教眾處於類似出家的孤立環境當中，知道教團真相的只有少數幹部。</p>
+<p>回到普丁，當親俄派武裝勢力事實上控制烏克蘭東部的盧干斯克州與頓內茨克州之後，立即單方面宣布承認這兩州的獨立。並聲稱烏克蘭政府軍對東部區域展開「民族大屠殺」，並立即以「保護俄語居民」、「保護本國國民」的理由開始讓俄羅斯軍隊入侵烏克蘭。強調烏克蘭才是極端的民族主義國家、是新納粹主義，並在開戰之後加強控制國內的輿論情報。</p>
+<p>然而，勢態發展並不順利，普丁大發雷霆。這也反映出普丁與麻原相同，都存在自戀型人格障礙。</p>
+<h3>掌權者過分自戀所引起的慘劇</h3>
+<p>承認於地鐵散佈沙林毒氣，並殺害地鐵站兩名職員，後因認罪被判處無期徒刑的林郁夫，在公審當中，以他前慶應大學附屬醫院醫師的身分來分析教主麻原，確認他有「自戀型人格障礙」。</p>
+<p>有自戀傾向的人，一般都是從認為自己是非常優秀、卓越、特別的存在開始。若是現實生活中的自己也符合這種認知，他就會成為優秀的人。非常的有活力並充滿魅力，是人群的焦點。這在政治領導者當中並不少見，而且他們也經常能夠留下代表性的貢獻。但是，當理想的自己與現實的自己出現落差，便會充滿憤怒或者極度情緒低落，甚至演變成憂鬱，這時候就會出現人格障礙。</p>
+<p>就目前我們所得知的情報來看，普丁正處於這種傾向。他無法忍受在重返蘇聯榮光的道路上，受到阻礙。若是選擇放棄，則無法作為人民的表率，也等於失去總統大位。透過修法，雖然讓普丁的任期得以延長到2036年，他必須作為一個強大的領導人，否則就不符合他對自己的認知。他討厭這樣！就像麻原在被逮捕之前不斷逃亡一般，普丁也絕不讓步。</p>
+<p>若是麻原建立的奧姆真理教被稱作「邪教」的話，普丁所建立的俄羅斯可以稱得上是「邪教」國家了。但普丁與麻原不同的是，普丁背後是龐大的俄羅斯軍隊，他還握有核武的開關。</p>
+<p>（有興趣轉載文章內容的台灣媒體，歡迎來信聯絡info@jbpress.co.jp）</p>
