--- a/_posts/2022-05-09-VOCUS-領養代替購買如何成為情緒勒索.html
+++ b/_posts/2022-05-09-VOCUS-領養代替購買如何成為情緒勒索.html
@@ -9,7 +9,7 @@ author: 林艾德
 ---
 
 <div class="draft-block draft--p left">右邊白色畏畏縮縮的那隻叫九桃，現在是隻頭好壯壯的三歲大貓了。左邊黑色眼睛烏溜溜地那隻沒有名字，他在我們救援成功的隔天就離世了。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:3002px" class="image-block-prerender" data-src="https://images.vocus.cc/2834672e-6b10-4847-8fdc-2ed59b4d6fb1.png" data-width="3002" data-height="1803" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">三年前救援的小貓</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/2834672e-6b10-4847-8fdc-2ed59b4d6fb1.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">三年前救援的小貓</figcaption></div>
 <div class="draft-block draft--p left">他們是在附近山腳被母貓遺棄的一對浪貓兄妹，每次要抓他們時，小黑貓總是兇巴巴地擋在小白貓前面，好幾次已經抓到他了，卻又被他瘋狂地撕咬掙脫常常，然後帶著小白貓一起逃走。遠遠看著他們兩個一前一後髒兮兮地走過街頭，我常常都會想到螢火蟲之墓的那對兄妹。</div>
 <div class="draft-block draft--p left">成功把兩隻小貓都抓進籠子的那天是週日的晚上6點多，常去的獸醫院已經休息，於是我們準備了幼貓罐和水，預計隔天一早帶他們去除蟲，沒想到，那就是我最後一次見到那對靈動的眼睛。隔天，小黑貓雙眼緊閉、一動也不動地躺在我面前，我輕輕推著他僵直的四肢，一旁小白貓無助地喵喵叫著，這一幕已經過了三年，但在我腦中仍像剛演完的電影一樣清晰，當時的懊悔心情，至今也是一點都沒有衰減。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">我可以做得更好</span>，這樣的念頭一直纏繞著。無論是早一點抓到他，或是當下就送他到稍微遠一點的醫院，對我來說都只是舉手之勞，但對他來說，卻是生與死的差別。</div>
@@ -17,7 +17,7 @@ author: 林艾德
 <div class="draft-block draft--p left">每天見面的九桃跟沒有名字的小黑貓，都再再提醒著我要用心生活，<span style="font-weight: bold; ">用盡全力的人才能過得問心無愧。</span></div>
 <div class="draft-block draft--p left">昨天看到鍾明軒買品種狗的新聞，一開始也覺得沒資格說什麼，尤其自己最近再次嘗試吃素失敗，邏輯上來說，假如肉沒有不可取代的營養價值，那吃肉也是一種購買導致殺生、也是一種買賣生命的行為不是嗎？把從肉身上得到的快樂算得比動物的生命重要，對我們來說是理所當然的事，這跟鍾明軒買品種狗也沒有太大差別。因為在吃素上沒有用盡全力，所以如果一名素食主義指責我，我大概也只能說：「對不起，我真的很愛吃肉。」</div>
 <div class="draft-block draft--p left">但仔細看了新聞，發現鍾明軒是用指責對方情緒勒索來取代對不起，這就引起我的興趣，畢竟如果誠實面對自己，那在我們面前只有兩種選擇：一是宣示人類滿足慾望的自由高於動物的生命，動物僅是可以利用的物品，購買寵物滿足我對特定品種的愛好，就跟吃肉滿足了我一樣，值得動物為此而死。那就沒有情勒問題，因為我根本不在乎；二是認定並非所有慾望都比動物生命更重要，賦予動物某種超越物的重要性，為此應該盡量減少非必要的殺生，那麼吃肉就像購買寵物一樣沒必要且自私，控制不了慾望就該道歉，而不是反過來指責對方情勒。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:828px" class="image-block-prerender" data-src="https://images.vocus.cc/6880f13c-6564-4f17-ba3f-e1f31f100fb6.jpg" data-width="828" data-height="468" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">鍾明軒認為領養代替購買有時會成為情緒勒索</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/6880f13c-6564-4f17-ba3f-e1f31f100fb6.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">鍾明軒認為領養代替購買有時會成為情緒勒索</figcaption></div>
 <div class="draft-block draft--p left">當然，人類的大腦不是這樣運作，我們不常透過理性反省，而是會直覺式地替自己的行為辯護，這些辯護因為改變了你原本的認知，常常就顯得破綻百出。</div>
 <div class="draft-block draft--p left">購買品種狗的鍾明軒行為上是第一種人，但當他的理性認知覺得第二種價值觀才對時，就會開始為自己找理由來取代道歉。例如他強調有一種愛是只針對特定品種的寵物，就像人類間自由戀愛也會選菜。但如果我們對愛的定義是賦予對方主體性、在乎對方處境、不僅僅是利用對方滿足自己，那戀愛跟養品種狗就沒有可比性。喜歡毛多的男生，並不會因此出現多毛男性繁殖場，因為人類具有許多基本權利避免我們被當作物來看待，但指名要養白柴犬，卻無可避免的會出現特定繁殖場來滿足你的慾望，<span style="font-weight: bold; ">其中必定有幸福的柴犬，但忽視因此受苦的柴犬只是在自欺欺人。</span></div>
 <div class="draft-block draft--p left">就像煙癮者會舉出身邊抽煙長壽的例子，我們也能舉出一百種需要品種狗繁殖場的理由來讓自己好過，這種自欺欺人非常常見。鍾明軒在影片開頭說許多名人購買品種狗都要騙人說是撿到或領養的，但其實鍾明軒跟這些人沒有兩樣，他的思辨只用另一種方式說謊，連自己都騙了。</div>
