--- a/_posts/2022-04-11-VOCUS-關於意識形態的雜談-5.html
+++ b/_posts/2022-04-11-VOCUS-關於意識形態的雜談-5.html
@@ -9,10 +9,9 @@ author: 王立第二戰研所
 ---
 
 <blockquote class="draft-block draft--blockquote">每個人看待不同的議題，都是有層次的（再次強調層次的重要）。這個層次會根據很多條件，當時的狀況有所調整，所以意識形態才會是光譜、區間，不是一條分界線。即便是涇渭分明的兩套OO跟XX主義，在某些議題上也會有一致性的態度。</blockquote>
-<div class="embed-block-prerender" data-vocus="true" data-url="https://vocus.cc/article/6228b658fd897800010444eb" data-title="關於意識形態的雜談（4） | 王立第二戰研所 - vocus" data-description="當你所有的議題都有概念，並且做出了自己的判斷後，若可以把每一個議題都標上分數，就能抓一個總分，好比說他拿了80分是偏自由派，你得了30分偏保守派。這就是大部分意識形態光譜測驗的概念來源，只是多數題目就筆者的角度來說，頗有相當的誘導意味就是。關於意識形態的雜談 ..." data-providername="Vocus" data-backgroundimageurl="https://images.vocus.cc/38998dc3-e9b9-4555-bfe8-17a2d2c2944a.png"></div>
-<div class="draft-block draft--p left"></div>
+<p><h3><a href="https://vocus.cc/article/6228b658fd897800010444eb">關於意識形態的雜談（4） | 王立第二戰研所 - vocus</a></h3><img src="https://images.vocus.cc/38998dc3-e9b9-4555-bfe8-17a2d2c2944a.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">當你所有的議題都有概念，並且做出了自己的判斷後，若可以把每一個議題都標上分數，就能抓一個總分，好比說他拿了80分是偏自由派，你得了30分偏保守派。這就是大部分意識形態光譜測驗的概念來源，只是多數題目就筆者的角度來說，頗有相當的誘導意味就是。關於意識形態的雜談 ...</figcaption></p>
 <div class="draft-block draft--p left">上週的光譜我們繼續留著</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1216px" class="image-block-prerender" data-src="https://images.vocus.cc/9d2c5ecd-5798-4461-a5cd-c208d460c6a7.jpg" data-width="1216" data-height="229" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/9d2c5ecd-5798-4461-a5cd-c208d460c6a7.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left"><span style="font-style: italic; ">『所以，到底要不要談左派還是右派？』<br>「咦？我不是一直在提？」<br>『咦咦咦？』</span></div>
 <div class="draft-block draft--p left">以上大概是我這些年，跟人談左右派時的狀況，大部分的人想的是，有立即性的分類，可是其實並不能這樣講。但不是第一篇就說能夠分類嗎？所以筆者到底在賣什麼關子？</div>
 <div class="draft-block draft--p left">不是賣關子，而是若一開始，就把意識形態的左右分類貼出來，馬上就變成貼標籤大賽。筆者這些年越來越討厭連四則運算都不會，就說想學微積分的學生，兩者道理一樣。</div>
@@ -25,7 +24,7 @@ author: 王立第二戰研所
 <div class="draft-block draft--p left">要看偏右派的，也不推薦直接從經濟學相關著作開始，就算是<a href="https://zh.wikipedia.org/wiki/%E7%BA%A6%E7%91%9F%E5%A4%AB%C2%B7%E7%86%8A%E5%BD%BC%E7%89%B9" target="_blank" class="draft--a">熊彼得</a>等還算通俗的寫法，沒數學基礎跟生活經驗，同樣看不懂。那麼<a href="https://zh.wikipedia.org/zh-tw/%E5%BC%97%E9%87%8C%E5%BE%B7%E9%87%8C%E5%B8%8C%C2%B7%E5%93%88%E8%80%B6%E5%85%8B" target="_blank" class="draft--a">海耶克</a>的<a href="https://zh.wikipedia.org/wiki/%E9%80%9A%E5%BE%80%E5%A5%B4%E5%BD%B9%E4%B9%8B%E8%B7%AF" target="_blank" class="draft--a">《到奴役之路》</a>等不是經典嗎？不建議，理由很多這邊不詳述。</div>
 <div class="draft-block draft--p left">筆者必須說，右派的書籍有些看來好讀，但其實沒有基礎一樣看不懂，會變成另一種極端。強烈建議，各位想懂右派的思維，就要先理解保守派的想法。</div>
 <div class="draft-block draft--p left">為何筆者會說要去理解保守派？因為保守派並非一個組織性強的學門，也根本沒這玩意，保守主義是一個沒有條目，也沒有被梳理出普遍原則性的東西，但若你不理解保守派的思維，直接去讀右派的標準書目，保證望文生義到亂讀一通。（很容易變成用單一尺標看左右，例如只要支持政府擴張的就是必定絕對是左派。）</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:600px" class="image-block-prerender" data-src="https://images.vocus.cc/9ae98432-ee11-4dcc-94bf-7187226e989d.png" data-width="600" data-height="600" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/9ae98432-ee11-4dcc-94bf-7187226e989d.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">個人建議，可以從<a href="https://zh.wikipedia.org/wiki/%E7%BD%97%E6%9D%B0%C2%B7%E6%96%AF%E5%85%8B%E9%B2%81%E9%A1%BF" target="_blank" class="draft--a">羅傑・史庫頓</a>的<a href="https://www.books.com.tw/products/0010615718" target="_blank" class="draft--a">《保守主義經典閱讀》</a>下手，這本比較通順易讀，範例較多且具有現實感。如果你想更深入一點，那麼就是<a href="https://zh.wikipedia.org/wiki/%E7%BD%97%E7%B4%A0%C2%B7%E6%9F%AF%E5%85%8B" target="_blank" class="draft--a">羅素柯克</a>的著作。</div>
 <div class="draft-block draft--p left">這邊也算是跟各位破梗，網路上大部分偏保守派又言之有物的人，其論點幾乎跳脫不出柯克的範疇，有些人幾乎是照著念。這道理也很簡單，保守主義的基本思維可以說就是「<span style="font-weight: bold; ">保有過去美好的事物</span>」，若能理解就會抓出，保守派的本質比較偏穩健改革。</div>
 <h3 class="draft-block draft--h3" name="header-dnse1">只想讀一本的看大辯論，從中觀照左右派的思維差異</h3>
@@ -51,7 +50,7 @@ author: 王立第二戰研所
 <div class="draft-block draft--p left">進一步說，若國家都分配了50元，只是富有市自掏腰包出了50元補到100元，那麼還是遵循左派認為不公平，右派先看效率？</div>
 <div class="draft-block draft--quotesSpecial center"><div class="content">不，兩者都會覺得這不公平。</div></div>
 <div class="draft-block draft--p left">真正的差別是怎樣去弭平，以及如何看待這個不公平。（也就是真正的左右派會去討論怎麼解決，採取的手段跟方向，而不是光咆哮不公，這種人通稱政治<a href="https://twblg.dict.edu.tw/holodict_new/result_detail.jsp?n_no=3550&curpage=1&sample=%E4%BD%AC%E4%BB%94&radiobutton=1&querytarget=1&limit=20&pagenum=1&rowcount=1" target="_blank" class="draft--a">佬仔</a>）</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:640px" class="image-block-prerender" data-src="https://images.vocus.cc/0cc0e268-58c0-4b94-a4cb-def9b9ac78a1.jpg" data-width="640" data-height="287" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">編：代表人物</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/0cc0e268-58c0-4b94-a4cb-def9b9ac78a1.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">編：代表人物</figcaption></div>
 <div class="draft-block draft--p left">如果國家預算基於某種公式計算獲得的比例，所以富市怎樣都會有較多經費，窮縣就是沒有。那麼左派會傾向調整公式，將預算平攤到更合理的比例。</div>
 <div class="draft-block draft--p left">右派則更可能認為先解決貧窮縣的收入太低。畢竟若富市的預算可以提供國家整體更高的經濟發展，那麼降低富市的預算去給窮縣，整體產值反而下降，形同殺雞取卵，手段會通常會認為應降低窮縣的工商稅，或是舉債處理。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">也就是，左派想的是當下的不公平，會影響到以後的發展，就發展效率來說反而較低。右派看的是現狀的平衡打破，反而讓發展效率變差大家變窮，對其他人來說才是不公平。</span></div>
@@ -59,4 +58,3 @@ author: 王立第二戰研所
 <div class="draft-block draft--p left">簡單說就是，大家數學設定的計算條件不大一樣。</div>
 <div class="draft-block draft--p left">到此為止，我們可以進入下一段，也就是了解一下，當代的左右派，其最大的差異在哪。</div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
