--- a/_posts/2022-05-09-VOCUS-方格子電台-podcast-ep8-澳洲aukus戰略.html
+++ b/_posts/2022-05-09-VOCUS-方格子電台-podcast-ep8-澳洲aukus戰略.html
@@ -10,7 +10,7 @@ author: 王立第二戰研所
 
 <div class="draft-block draft--p left">全新一季EP.8已上線</div>
 <div class="draft-block draft--p left">每週一更新：時事議題、軍事常識、台海關係⋯都在最新一集<a href="https://reurl.cc/o1Z7xM" target="_blank" class="draft--a">《王立第二戰研所》</a>！</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1200px" class="image-block-prerender" data-src="https://images.vocus.cc/0008d389-4716-46ce-a346-7c03a25abbb3.jpg" data-width="1200" data-height="630" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">|Apple podcast、Sound on、KKBOX、Spotify、Google podcast、Firstory⋯⋯各大平台皆可收聽|</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/0008d389-4716-46ce-a346-7c03a25abbb3.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">|Apple podcast、Sound on、KKBOX、Spotify、Google podcast、Firstory⋯⋯各大平台皆可收聽|</figcaption></div>
 <div class="draft-block draft--quotesSpecial center"><div class="content">「AUKUS」表面上看起來是一個買賣潛艇的概念<br>後面講什麼基於和平、維護秩序，不用太在意。</div></div>
 <div class="draft-block draft--p left">點此用喜歡的方式收聽節目▶︎▷<a href="https://reurl.cc/o1Z7xM" target="_blank" class="draft--a">《方格子電台-王立第二戰研所》</a></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
