--- a/_posts/2022-05-10-PQ-中國兩棲攻擊艦實彈演習-越南強烈抗議中國禁漁令.html
+++ b/_posts/2022-05-10-PQ-中國兩棲攻擊艦實彈演習-越南強烈抗議中國禁漁令.html
@@ -32,7 +32,7 @@ author: 蔡侯塞
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/72e923dd-6c4b9041ab8b21ee49121e.jpg" alt="" class="wp-image-100736" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/72e923dd-6c4b9041ab8b21ee49121e.jpg 760w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/72e923dd-6c4b9041ab8b21ee49121e-300x203.jpg 300w" sizes="(max-width: 760px) 100vw, 760px" /><figcaption>中國國家領導人習近平2021年4月23日，海軍三型主戰艦艇 —— 長征18號艇、大連艦、海南艦在海南三亞軍港集中交接入列。<br>圖／中國國防部</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/72e923dd-6c4b9041ab8b21ee49121e.jpg" alt="" class="wp-image-100736" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/72e923dd-6c4b9041ab8b21ee49121e.jpg 760w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/72e923dd-6c4b9041ab8b21ee49121e-300x203.jpg 300w" sizes="(max-width: 760px) 100vw, 760px" /><figcaption>中國國家領導人習近平2021年4月23日，海軍三型主戰艦艇 —— 長征18號艇、大連艦、海南艦在海南三亞軍港集中交接入列。<br>圖／中國國防部</figcaption></figure></div>
 
 
 
