Update VOCUS 2022-05-11 patch

--- a/_posts/2022-05-10-VOCUS-手中的畫布.html
+++ b/_posts/2022-05-10-VOCUS-手中的畫布.html
@@ -48,5 +48,4 @@ author: 直樹的流浪之歌
 <div class="draft-block draft--p left">在每一條康莊大道上</div>
 <div class="draft-block draft--p left">失魂地擺弄雙腳</div>
 <div class="draft-block draft--p left">俯首稱臣</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:579px" class="image-block-prerender" data-src="https://images.vocus.cc/951a5dc7-af20-4ff2-8f60-b35ec4d6f097.jpg" data-width="579" data-height="617" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">2018.7越南胡志明市</figcaption></div></div>
-<div class="draft-block draft--p left"></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/951a5dc7-af20-4ff2-8f60-b35ec4d6f097.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">2018.7越南胡志明市</figcaption></div>
