--- a/_posts/2022-05-10-VOCUS-政治-詐助理費.html
+++ b/_posts/2022-05-10-VOCUS-政治-詐助理費.html
@@ -8,28 +8,21 @@ tags: blog
 author: 蘇 遇
 ---
 
-<div class="draft-block draft--p left"></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1280px" class="image-block-prerender" data-src="https://images.vocus.cc/67f27608-d982-4158-bca4-42d40480d36d.jpg" data-width="1280" data-height="764" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖 / pixabay </figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/67f27608-d982-4158-bca4-42d40480d36d.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖 / pixabay </figcaption></div>
 <h2 class="draft-block draft--h2" name="header-d7ukh">以人頭名額、薪資以少報多這兩種方式最常見。</h2>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
 <blockquote class="draft-block draft--blockquote"><span style="font-weight: bold; ">選舉</span></blockquote>
 <div class="draft-block draft--p left"><span style="text-decoration: underline; ">要相信這世界上多數人還是會以利益為優先，即便意開始充滿熱情理念，到後面也會因為大家都一樣或是忍不住權力的附加價值便會跟當初的自己分道揚鑣，只是選舉變成大家非想想要做的事情，投資的概念就是不可能會有人想要虧損自己的成本，再轉頭看看台灣的選舉發衛生紙或是口罩、宣傳單或是掃街拜票，這些成本的投入又會在哪裡得到回收的機會或是更大的利益才驅使人們往這裡頭栽進去也要當選進入政治的圈套。</span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
 <blockquote class="draft-block draft--blockquote"><span style="font-weight: bold; ">等級</span></blockquote>
 <div class="draft-block draft--p left"><span style="text-decoration: underline; ">沒有人工作是不辛苦的，但台灣大多數的勞工是吹風日曬的，這些人努力賺錢也是需要繳交稅金的，而上至總統下至里長等都是我們這些平民老百姓辛苦錢集資起來的稅金付給他們薪水的，就連每天兩點報數字的指揮官亦是如此，但不明白的是他們好像是看不起老百姓的，舉個例子來說，民意代表與立法委員就是代替人民監督政府的存在，但看看目前官員備詢時囂張的氣焰尤其是行政院長更是其中模範，看不起、瞧不起甚至辯論至極與模糊焦點，實實在在不把人民選的代表與立委放在眼裡，換句話說自然可以延伸為看不起人民，因為這些質詢的人就是代理人民監督政府的執行者無庸置疑。</span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
 <blockquote class="draft-block draft--blockquote"><span style="font-weight: bold; ">工蟻</span></blockquote>
 <div class="draft-block draft--p left"><span style="text-decoration: underline; ">國家的運作絕對不會是依靠那些高官的關係，而是依靠這社會裡每個小小的齒輪與螺絲釘所撐起，如同軍中的長官沒有小兵他們甚麼也不是的邏輯是一樣的道理，那為甚麼我們不能追求自己認為合理的事情，而是要聽信政府不假掩飾的謊言金句，如果他們無法讓我們有更加安定繁榮的生活與經濟，那又為甚麼我們要請他們幫忙管理這個國家與區域，別再說甚麼貪汙與否或是黑道背景，民進黨真的沒有比較乾淨，甚至有可能更加骯髒只是你我不知情，不知者無罪，但只是把你自己賠進去繼續起鬨愛與和平發電機。</span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
 <blockquote class="draft-block draft--blockquote"><span style="font-weight: bold; ">貪汙</span></blockquote>
 <div class="draft-block draft--p left"><span style="text-decoration: underline; ">詐領助理費或許不是甚麼大事情，但有損形象那是一定，我們人民選擇相信你卻背叛我們的選擇跑去做些有礙觀瞻的事情，既然你人品如此我們又怎麼放心你代替我們發聲與監督政府的事情，別再說只有國民黨會做這種行徑，我只能說只要是人都會有所貪心，大多數的人都不會滿足於現狀安於安逸，都會想要更進一步的得到更多東西，這是人之常情，一生清廉才會顯得品德兼具，是錯的事情但卻是每個人在那個位置都有可能會發生的事蹟，別過於責怪但也別再相信這個人的任何言語。</span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">我沒有我沒有然後就沒有了然後，掛人頭換取金錢或許每個人都在做只是比較倒楣剛好抓到我，基於政治生涯又不能把別人拉近這鍋粥，只能說著我沒有我沒有，有沒有司法自然會調查清楚且把真相公布給民眾，但這種事情不是罪大惡極但也層出不窮，只能說誰當官會不想多賺些金錢或酬庸，不然花那麼多錢選舉是真心要改變社會風氣維護世界和平嗎 ?</span></div>
 <h2 class="draft-block draft--h2" name="header-c9le9">只是為了賺錢讓自己有更多錢吃高檔食物而已。</h2>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
