--- a/_posts/2022-05-10-PQ-李鴻鈞任監察院副院長-陳翠蓮遭拒任公視董事-轉型正義在台灣還可能嗎.html
+++ b/_posts/2022-05-10-PQ-李鴻鈞任監察院副院長-陳翠蓮遭拒任公視董事-轉型正義在台灣還可能嗎.html
@@ -16,7 +16,7 @@ author: 楊是命
 
 
 
-<p>蔡英文總統昨（9）日提名曾任國民黨、親民黨立委的李鴻鈞擔任監察院副院長一職。李鴻鈞表示，非常蔡英文總統的肯定與提名，並已經面報親民黨黨主席宋楚瑜，即日起請辭親民黨秘書長一職。</p>
+<p>蔡英文總統昨（9）日提名曾任國民黨、親民黨立委的李鴻鈞擔任監察院副院長一職。李鴻鈞表示，非常感謝蔡英文總統的肯定與提名，並已經面報親民黨黨主席宋楚瑜，即日起請辭親民黨秘書長一職。</p>
 
 
 
@@ -24,7 +24,7 @@ author: 楊是命
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full is-resized"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/69052410-1036x768_149046883771.jpeg" alt="" class="wp-image-100760" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/69052410-1036x768_149046883771.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/69052410-1036x768_149046883771-300x222.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/69052410-1036x768_149046883771-768x569.jpeg 768w" sizes="(max-width: 768px) 100vw, 768px" /><figcaption>曾任國民黨、親民黨立委的李鴻鈞，即將出任象徵人權保障的監察院副院長一職，讓人懷疑執政黨的轉型正義，到底有沒有打算落實？<br>（圖／中央社）</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/69052410-1036x768_149046883771.jpeg" alt="" class="wp-image-100760" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/69052410-1036x768_149046883771.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/69052410-1036x768_149046883771-300x222.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/69052410-1036x768_149046883771-768x569.jpeg 768w" sizes="(max-width: 768px) 100vw, 768px" /><figcaption>曾任國民黨、親民黨立委的李鴻鈞，即將出任象徵人權保障的監察院副院長一職，讓人懷疑執政黨的轉型正義，到底有沒有打算落實？<br>（圖／中央社）</figcaption></figure></div>
 
 
 
