--- a/_posts/2022-05-10-INITIUM-尊重谁的生命-拿掉谁的选择-限制谁的自由-三位美国女性的堕胎经历.html
+++ b/_posts/2022-05-10-INITIUM-尊重谁的生命-拿掉谁的选择-限制谁的自由-三位美国女性的堕胎经历.html
@@ -9,7 +9,7 @@ author: 陈婉容
 ---
 
 <p>「“要他当孩子的父亲当然不可能，而要我当母亲，对孩子也绝对不公平。第二天早上，我打了个电话，预约终止怀孕。 ”」</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220511-international-abortion-stories-told-by-women/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/05/a0ef6c6050834759a2daef9f20865391.jpg?imageView2/1/w/1080/h/720/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption"><span class="credit"></span></figcaption></figure><p><small>【编者按】今年5月2日，美国最高法院私下表决推翻“罗诉韦德案”（Roe v. Wade）的法官意见草稿外流，美国社会大为震惊。自罗案成为美国堕胎权里程碑案例的1973年起，堕胎，以至女性的身体本身，就是了保守派和自由派互相角力的战场。近年全球威权保守主义再度崛起，堕胎这个本来就高度政治化﹑党派化（partisan）的议题，再度成为了保守派“美国叙事”的核心。自2013年起，多个“红州”都意图通过“心跳法案”（heartbeat bill），即如果胚胎已有心跳或脉搏，终止怀孕就是违法，有些州的“心跳法案”甚至没有豁免因奸成孕或乱伦怀孕。此前许多这些“心跳法案”因违反罗案被判违宪，但罗案一旦被推翻，全美有多达26个州很可能即时推动堕胎入罪化。</small></p>
+            <figcaption itemprop="caption"><span class="credit"></span></figcaption></figure><p><small>【编者按】今年5月2日，美国最高法院私下表决推翻“罗诉韦德案”（Roe v. Wade）的法官意见草稿外流，美国社会大为震惊。自罗案成为美国堕胎权里程碑案例的1973年起，堕胎，以至女性的身体本身，就是保守派和自由派互相角力的战场。近年全球威权保守主义再度崛起，堕胎这个本来就高度政治化﹑党派化（partisan）的议题，再度成为了保守派“美国叙事”的核心。自2013年起，多个“红州”都意图通过“心跳法案”（heartbeat bill），即如果胚胎已有心跳或脉搏，终止怀孕就是违法，有些州的“心跳法案”甚至没有豁免因奸成孕或乱伦怀孕。此前许多这些“心跳法案”因违反罗案被判违宪，但罗案一旦被推翻，全美有多达26个州很可能即时推动堕胎入罪化。</small></p>
 <p><small>《端传媒》走访了三位美国的普通女性，让她们诉说自己的堕胎经历。在那些关乎法律﹑医学道德﹑宗教﹑还有哲学社会学的宏大叙事以外，还有常常始于浴室地板和一支验孕棒的那种“我发觉自己怀孕了，然后……”的故事，而那个可能才是真正重要的故事。</small></p>
 <h2>Amanda (29岁，社会学硕士研究生，居于美国乔治亚州）</h2>
 <p>在我念的公立高中，未婚怀孕是很常见的事。我还不到18岁，就替几个好朋友办过产前派对（baby shower）了。</p>
