--- a/_posts/2022-05-10-PQ-跨國美商警告中國封城拖垮產業-歐盟商會-封城讓歐企不願投資中國.html
+++ b/_posts/2022-05-10-PQ-跨國美商警告中國封城拖垮產業-歐盟商會-封城讓歐企不願投資中國.html
@@ -28,7 +28,7 @@ author: 艾格姆
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/53c9c73d-2000x1125_0394952473814.jpg" alt="" class="wp-image-100903" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/53c9c73d-2000x1125_0394952473814.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/53c9c73d-2000x1125_0394952473814-300x169.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/53c9c73d-2000x1125_0394952473814-768x432.jpg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>中國上海自3月28日起分兩階段分區封城，上海浦東新區的金融業者從上一輪封控開始，就有不少人「以公司為家」。圖為19日上海疫情防控下的市中心商圈人車稀少。<br>圖／中央社</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/53c9c73d-2000x1125_0394952473814.jpg" alt="" class="wp-image-100903" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/53c9c73d-2000x1125_0394952473814.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/53c9c73d-2000x1125_0394952473814-300x169.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/53c9c73d-2000x1125_0394952473814-768x432.jpg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>中國上海自3月28日起分兩階段分區封城，上海浦東新區的金融業者從上一輪封控開始，就有不少人「以公司為家」。圖為19日上海疫情防控下的市中心商圈人車稀少。<br>圖／中央社</figcaption></figure></div>
 
 
 
